force-app/main/default/objects/AdditionalAmounts__c/AdditionalAmounts__c.object-meta.xml
<CustomObject>
    <label>Additional Amounts</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Additional Amounts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>