force-app/main/default/objects/AdditionalAmounts__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>EFOP Bonus</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>MAB Bonus</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>TEP</fullName>
            </value>
            <value>
                <fullName>WI Efficiency Bonus</fullName>
            </value>
            <value>
                <fullName>WI Efficiency Rate Reduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>