force-app/main/default/objects/AdditionalAmounts__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <label>Result</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>